--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,10 @@
 	"manifest_version": 2,
 	"name": "Not OSSP",
 	"description": "Adds warnings to posts in the One Sentence Startup Pitches (OSSP) Facebook group if they are more than one sentence long.",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"content_scripts": [
 		{
-			"matches": ["https://www.facebook.com/groups/1500321840185061/*"],
+			"matches": ["https://*.facebook.com*"],
 			"css": ["main.css"],
 			"js": ["jquery-3.1.0.slim.min.js", "nlp_compromise.min.js", "notOSSP.js"]
 		}
