--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
 	"version": "1.0.1",
 	"content_scripts": [
 		{
-			"matches": ["https://*.facebook.com*"],
+			"matches": ["https://*.facebook.com/*"],
 			"css": ["main.css"],
 			"js": ["jquery-3.1.0.slim.min.js", "nlp_compromise.min.js", "notOSSP.js"]
 		}
